Query approximation: better validation on mixed clusters